fixed sticky footer for narrower display sizes
fixed sticky footer for narrower display sizes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</div>	
 </div>
 	<footer class="main-footer">
-		<p>&copy;2015 Residents of The Best City Ever.</p>
+		<span>&copy;2015 Residents of The Best City Ever.</span>
 	</footer>
 </body>
 </html>
